syntax = "proto3";

package data;

option go_package = "./;data";

enum ExitCode {
    SUCCESS = 0;
    FAILED = 1;
    ABORTED = 2;
}

// Request message to update the run status of job
message RunStatusReq {
	string JobName = 1;
    ExitCode Status = 2;
}

// Response message for job's run status update
message RunStatusRes {}

// Service to check and free the holded job
service RunStatus {
	rpc Update(RunStatusReq) returns (RunStatusRes) {}
}